# multicloud-file-system

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  multicloud_fs.spec  pyproject.toml  setup.py
charts/multicloud-csi/: Chart.yaml  values.yaml
charts/multicloud-csi/templates/: controller.yaml  node.yaml  rbac.yaml  storageclass.yaml
csi/: Dockerfile  csi_pb2.py  csi_pb2_grpc.py  kind-config.yaml  run.sh
csi/cmd/: driver.py
csi/deploy/: controller.yaml  csi-driver.yaml  namespace.yaml  node.yaml  rbac.yaml  storageclass.yaml  testpod.yaml
csi/pkg/driver/: controller.py  driver.py  identity.py  node.py
csi/pkg/multicloud/: client.py
dashboard/: hyperflow-grafana-dashboard.json
dir1/: a.txt  b.txt  c.txt
dir1/dirA/: a.txt
dir2/: d.txt  e.txt
k8s/: juice-fs.yaml  juicefs.md  multicloud-fs.yaml
lib/: filesystem.py  hello.py  main.py
proto/: multicloud_fs.proto
src/: cache_manager.pyx  entrypoint.pyx  file_system.py  file_system.pyx  grpc_client.py  grpc_client.pyx  grpc_client_manager.py  grpc_client_manager.pyx  grpc_server.py  grpc_server.pyx  main.py  multicloud_fs_pb2.py  multicloud_fs_pb2.pyx  multicloud_fs_pb2_grpc.pyx  redis_client.py  redis_client.pyx
