[tool.poetry]
name = "multicloud-file-system"
version = "0.1.0"
description = ""
authors = ["Wojciech Przybytek <wprzybytek@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
python-dotenv = "^1.0.1"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"
fuse-python = "1.0.7"
redis = "^5.2.1"
cython = "^3.0.11"
pyinstaller = "^6.11.1"
kubernetes="^32.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[tool.black]
include = '\.pyx$|\.py$'

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
